# babybase

./: .env.example  .gitignore  AGENTS.md  README.md  babybase_design_guide.md  hackathon_pitch.md  pyproject.toml  taste_vector_challenges.md  technical_breakdown.md
config/: settings.py  urls.py  wsgi.py
core/: admin.py  middleware.py  models.py  pagination.py  throttles.py  urls.py
core/fixtures/: empty_template_for_name_enriching.csv  names_seed.json  ssa_2020_top500_boys.csv  ssa_2020_top500_boys_cultural_metadata.csv  ssa_2020_top500_boys_enriched.csv  ssa_2020_top500_girls.csv  ssa_2020_top500_girls_cultural_metadata.csv  ssa_2020_top500_girls_enriched.csv
core/migrations/: 0001_initial_user_model.py  0002_add_couple_and_onboarding_models.py  0003_add_name_and_vector_index_models.py  0004_add_recommendation_deck_models.py  0005_add_swipe_and_mutual_match.py  0006_add_name_2d_projections.py  0007_add_user_taste_vector.py  0008_onboarding_response_couple_nullable.py  0009_harden_couple_and_onboarding_constraints.py  0010_alter_recommendationdeck_mode.py  0011_add_match_removal_request.py  0012_add_cross_cultural_deck_mode.py  0013_add_phonetic_fields.py  0014_add_sounds_like_deck_mode.py
core/serializers/: __init__.py  auth.py  couples.py  onboarding.py  profiles.py  swipes.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
infra/: cdk.json  package-lock.json  package.json
scripts/: analyze_enriched_csvs.py  generate_enriched_starter_csvs.py
styles_experiments/: CampSiteModern.md  DesertSunrise.md  PacificCoast.md  TrailMap.md
(+103 files in other folders)
